# label-creator

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
label_creator/: container_labels.py  create_labels_csv.py  create_new_labels.py  create_new_mob_cont.py  create_new_site.py  create_new_stat_cont.py  csv_labels.py  label_creator.py  new_site.py  sample_labels.py
tests/: test_foo.py
