[tool.poetry]
name = "label_creator"
version = "0.0.1"
description = "A tool to generate labels for the DBGI project."
authors = ["Edouard Brülhart <fedouard.bruelhart@unifr.ch>"]
repository = "https://github.com/edouardbruelhart/label-creator"
documentation = "https://edouardbruelhart.github.io/label-creator/"
readme = "README.md"
packages = [
  {include = "label_creator"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
reportlab = "^4.1.0"
requests = "^2.31.0"
qrcode = "^7.4.2"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"
types-requests = "^2.32.0.20240712"
pytest-cov = "^5.0.0"
pyinstaller = "^6.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pandas = "<2.2.3"
pandas-stubs = "<2.2.1.240317"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["label_creator"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
ignore_missing_imports = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
